--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,6 @@
 @import 'scss/reset';
 @import 'scss/base';
+@import 'scss/animations';
 @import 'scss/header';
 @import 'scss/hero';
 @import 'scss/reasons';
