--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -37,6 +37,8 @@ footer {
         display: grid;
         grid-template-columns: repeat(3, minmax(0, 1fr));
         grid-column-gap: 24px;
+        opacity: 0;
+        animation: slideIn 0.75s forwards 0.2s ease;
 
         img {
           width: 96px;
@@ -63,6 +65,8 @@ footer {
       align-items: center;
       justify-content: space-between;
       width: 248px;
+      opacity: 0;
+      animation: slideIn 0.75s forwards 0.2s ease;
 
       img {
         width: 24px;
