refactor: reorganize assets img

--- a/src/scss/reasons.scss
+++ b/src/scss/reasons.scss
@@ -58,7 +58,7 @@
       right: 0;
       height: 196px;
       width: 185px;
-      background: url('../assets/img/form-d.svg') no-repeat;
+      background: url('../assets/img/forms/form-d.svg') no-repeat;
     }
 
     &:after {
@@ -68,7 +68,7 @@
       right: 0;
       width: 154px;
       height: 120px;
-      background: url('../assets/img/form-u.svg') no-repeat;
+      background: url('../assets/img/forms/form-u.svg') no-repeat;
     }
 
     .why__illustration {
