--- a/src/scss/trade-securely.scss
+++ b/src/scss/trade-securely.scss
@@ -41,7 +41,10 @@
       background: #fff;
       text-align: center;
       opacity: 0;
-      animation: smoothIn 0.75s forwards 0.2s ease;
+
+      &.visible {
+        animation: smoothIn 0.75s forwards 0.2s ease;
+      }
 
       img.card__cryptocurrency {
         width: 80px;
