--- a/src/scss/features.scss
+++ b/src/scss/features.scss
@@ -21,7 +21,10 @@
     .feat__text {
       max-width: 450px;
       opacity: 0;
-      animation: slideIn 1s forwards 0.3s ease;
+
+      &.visible {
+        animation: slideIn 1s forwards 0.3s ease;
+      }
 
       h3 {
         font-weight: bold;
@@ -42,20 +45,29 @@
 
     img.feat__illu-invest {
       opacity: 0;
-      animation: slideIn 1s forwards 0.5s ease;
       max-height: 427px;
+
+      &.visible {
+        animation: slideIn 1s forwards 0.5s ease;
+      }
     }
 
     img.feat__illu-statistics {
       opacity: 0;
-      animation: slideIn 1s forwards 0.2s ease;
       max-height: 453px;
+
+      &.visible {
+        animation: slideIn 1s forwards 0.2s ease;
+      }
     }
 
     img.feat__illu-table {
       opacity: 0;
-      animation: slideIn 1s forwards 0.5s ease;
       max-height: 334px;
+
+      &.visible {
+        animation: slideIn 1s forwards 0.5s ease;
+      }
     }
   }
 
