--- a/src/scss/reasons.scss
+++ b/src/scss/reasons.scss
@@ -16,7 +16,10 @@
       display: flex;
       align-items: center;
       opacity: 0;
-      animation: fadeIn 1s forwards 0.5s ease;
+
+      &.visible {
+        animation: fadeIn 1s forwards 0.5s ease;
+      }
 
       img {
         width: 80px;
@@ -75,7 +78,10 @@
       position: relative;
       overflow: hidden;
       opacity: 0;
-      animation: slideIn 1s forwards 0.2s ease;
+
+      &.visible {
+        animation: slideIn 1s forwards 0.2s ease;
+      }
 
       .illustration__line {
         position: absolute;
@@ -95,7 +101,10 @@
     .why__text {
       max-width: 480px;
       opacity: 0;
-      animation: slideIn 1s forwards 0.5s ease;
+
+      &.visible {
+        animation: slideIn 1s forwards 0.5s ease;
+      }
 
       h2 {
         font-weight: bold;
